Fix overflow problem (maybe).

--- a/public/sass/base/animations.scss
+++ b/public/sass/base/animations.scss
@@ -19,6 +19,7 @@
 	}
 }
 
+html,
 body{
 	overflow-x: hidden;
 }
